# aircraft-sim

./: .gitignore  CMakeLists.txt  HW2_424.sln  HW2_424.vcxproj  HW2_424.vcxproj.filters  README.md
src/: HW2_Visualizer.cpp  HW2_Visualizer.h  atc.cpp  atc.h  graph.h  integrator.cpp  integrator.h  main.cpp  math_funcs.cpp  math_funcs.h  neural_net.cpp  neural_net.h  plane.cpp  plane.h
